// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should deauth on 401 on creation 1`] = `
Array [
  Array [
    "Generating new deployment token for:",
    "http://localhost:8080",
  ],
  Array [
    "Error: authorization expired!",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should deauth on 401 on list 1`] = `
Array [
  Array [
    "Listing deployment tokens for:",
    "http://localhost:8080",
  ],
  Array [
    "Error: authorization expired!",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should generate token 1`] = `
Array [
  Array [
    "Generating new deployment token for:",
    "http://localhost:8080",
  ],
  Array [
    "New token generated:",
  ],
  Array [
    "",
  ],
  Array [
    "test",
  ],
  Array [
    "",
  ],
  Array [
    "WARNING!",
    "Make sure to write it down, you will not be able to get it again!",
  ],
]
`;

exports[`Should list tokens 1`] = `
Array [
  Array [
    "Listing deployment tokens for:",
    "http://localhost:8080",
  ],
  Array [
    "Got generated tokens:",
  ],
  Array [
    "",
  ],
  Array [
    "  > test []",
  ],
]
`;

exports[`Should list zero tokens 1`] = `
Array [
  Array [
    "Listing deployment tokens for:",
    "http://localhost:8080",
  ],
  Array [
    "Got generated tokens:",
  ],
  Array [
    "",
  ],
  Array [
    "  > No deployment tokens available!",
  ],
]
`;

exports[`Should remove token 1`] = `
Array [
  Array [
    "Removing deployment token for:",
    "http://localhost:8080",
  ],
  Array [
    "Deployment token successfully removed!",
  ],
]
`;
